# simple-webservice-rs

./: .env  Cargo.toml  Makefile  tags
migrations/2018-06-26-190955_create_extensions/: down.sql  up.sql
migrations/2018-06-26-191138_create_table_bug_reports/: down.sql  up.sql
migrations/2018-06-26-191257_create_function_trigger_set_timestamp/: down.sql  up.sql
migrations/2018-06-26-191355_create_trigger_set_timestamp/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
