[package]
name = "sleeping_forest"
version = "0.1.0"
authors = ["ffimnsr <ffimnsr@outlook.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hyper = "0.12"
futures = "0.1"
diesel = { version = "1.3", features = ["postgres", "chrono", "uuid", "serde_json"] }
dotenv = "0.13"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = "0.4"
