[package]
name = "sleeping_forest"
version = "0.1.0"
authors = ["ffimnsr <ffimnsr@outlook.com>"]
publish = false
autobins = false

[lib]
name = "lib_sleeping_forest"
path = "src/lib.rs"

[[bin]]
name = "sleeping_forest"
path = "src/bin/main.rs"

[dependencies]
gotham = "0.2"
gotham_derive = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hyper = "0.11"
futures = "0.1"
diesel = { version = "1.3", features = ["postgres", "chrono", "uuid", "serde_json"] }
dotenv = "0.13"
r2d2 = "0.8"
r2d2-diesel = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
mime = "0.3"
chrono = "0.4"
lettre = "0.8"
lettre_email = "0.8"
jsonwebtoken = "4.0"
log = "0.4"
env_logger = "0.5"
